@@ -660,7 +660,7 @@ class User {
 		[$rfc5322_atext\\.]+    # user part which is liberal :p
 		@                      # 'apostrophe'
 		[$rfc1034_ldh_str]+       # First domain part
-		(\\.[$rfc1034_ldh_str]+)+  # Following part prefixed with a dot
+		(\\.[$rfc1034_ldh_str]+)*  # Following part prefixed with a dot
 		$                      # End of string
 		/ix" ; // case Insensitive, eXtended
 
